Add jpackage to maven to build executables for 3 binaries